--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,11 +45,11 @@ jobs:
           - build: ubuntu64
             os: ubuntu-latest
             host_target: x86_64-unknown-linux-gnu
-            artifact: pdblister
+            artifact: symproxycloud
           - build: win64
             os: windows-latest
             host_target: x86_64-pc-windows-msvc
-            artifact: pdblister.exe
+            artifact: symproxycloud.exe
     steps:
     - uses: actions/checkout@v2
 
