Quick start; clear out default settings

--- a/default.toml
+++ b/default.toml
@@ -1,2 +1,2 @@
-upstream_server = "https://symweb.azurefd.net"
-scope = "api://af9e1c69-e5e9-4331-8cc5-cdf93d57bafa/.default"
+upstream_server = ""
+scope = ""
