--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,11 @@ futures = "0.3.30"
 reqwest = "0.12.7"
 serde = { version = "1.0.210", features = ["derive"] }
 thiserror = "1.0.63"
-tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.40.0", features = ["macros", "process", "rt-multi-thread"] }
+tokio-stream = "0.1.16"
 toml = "0.8.19"
 tower-http = { version = "0.5.2", features = ["trace"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 url = "2.5.2"
+uuid = "1.10.0"
