--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ anyhow = "1.0.89"
 axum = { version = "0.7.5", features = ["tower-log", "macros"] }
 azure_core = "0.20.0"
 azure_identity = "0.20.0"
+azure_storage = "0.20.0"
+azure_storage_blobs = "0.20.0"
 clap = { version = "4.5.17", features = ["derive"] }
 clap-verbosity-flag = "2.2.1"
 futures = "0.3.30"
