Use `figment` to expose layered configurability

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,13 @@ azure_storage = "0.20.0"
 azure_storage_blobs = "0.20.0"
 clap = { version = "4.5.17", features = ["derive"] }
 clap-verbosity-flag = "2.2.1"
+figment = { git = "https://github.com/SergioBenitez/Figment.git", version = "0.10.19", features = ["toml", "env"] }
 futures = "0.3.30"
 reqwest = "0.12.7"
 serde = { version = "1.0.210", features = ["derive"] }
 thiserror = "1.0.63"
 tokio = { version = "1.40.0", features = ["macros", "process", "rt-multi-thread"] }
 tokio-stream = "0.1.16"
-toml = "0.8.19"
 tower-http = { version = "0.5.2", features = ["trace"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
