--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ sha2 = "0.10.8"
 thiserror = "1.0.63"
 tokio = { version = "1.40.0", features = ["macros", "process", "rt-multi-thread"] }
 tokio-stream = "0.1.16"
+tokio-util = { version = "0.7.12", features = ["io"] }
 tower-http = { version = "0.5.2", features = ["trace"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
