--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ clap-verbosity-flag = "2.2.1"
 figment = { git = "https://github.com/SergioBenitez/Figment.git", version = "0.10.19", features = ["toml", "env"] }
 form_urlencoded = "1.2.1"
 futures = "0.3.30"
-reqwest = "0.12.7"
+reqwest = { version = "0.12.7", default-features = false, features = ["default-tls", "charset"]}
 serde = { version = "1.0.210", features = ["derive"] }
 sha2 = "0.10.8"
 thiserror = "1.0.63"
